--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "chalk": "^4.1.2",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "ora": "^5.4.1"
   },
   "devDependencies": {
     "jest": "^27.4.4"
