--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
