--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.25.2",
+    "discord-bitfield-calculator": "^1.0.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "ora": "^5.4.1"
