--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "disc-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/main.js"
+    "start": "node ./src/main.js"
   },
   "repository": {
     "type": "git",
