--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "disc-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "./src/main.js",
   "scripts": {
     "test": "jest",
     "start": "node ./src/main.js"
@@ -21,6 +21,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/voice": "^0.7.5",
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.25.2",
