--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,41 @@
 {
+  "redeployID": "920655223264018473",
   "botSettings": {
     "bitfieldIntents": [8]
   },
-  "adminCommands": ["delete"]
+  "adminCommands": ["delete", "Redeploy", "redeploy"],
+  "activitiesList": {
+    "youtube": {
+      "id": "880218394199220334",
+      "name": "watch YouTube together"
+    },
+    "sketchy_artist": {
+      "id": "879864070101172255",
+      "name": "Sketchy Artist"
+    },
+    "doodle_crew": {
+      "id": "878067389634314250",
+      "name": "Doodle Crew"
+    },
+    "poker_night": {
+      "id": "755827207812677713",
+      "name": "Poker Night"
+    },
+    "word_snacks": {
+      "id": "879863976006127627",
+      "name": "Word Snacks"
+    },
+    "betrayal": {
+      "id": "773336526917861400",
+      "name": "Betrayal.io"
+    },
+    "fishington": {
+      "id": "814288819477020702",
+      "name": "Fishington.io"
+    },
+    "chess": {
+      "id": "832012774040141894",
+      "name": "Chess in The Park"
+    }
+  }
 }
