mongodb implementation & basic economy

--- a/config/config.json
+++ b/config/config.json
@@ -37,5 +37,15 @@
       "id": "832012774040141894",
       "name": "Chess in The Park"
     }
-  }
+  },
+  "statuses": [
+    "🧘 I'm demonstrating that gravity is a hoax forever",
+    "🍁 420 servers!",
+    "Anyone else suicidal or is it just me?",
+    "阿保か",
+    "🎵 Hand me the aux cord",
+    "Now with /activity options!",
+    "Made with love by Koichi",
+    "🌎 It's flat"
+  ]
 }
