--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@discordjs/voice": "^0.7.5",
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
+    "dayjs": "^1.10.7",
     "discord-api-types": "^0.25.2",
     "discord-bitfield-calculator": "^1.0.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "ora": "^5.4.1"
+    "mongodb": "^4.2.2",
+    "mongoose": "^6.1.2",
+    "ora": "^5.4.1",
+    "string-progressbar": "^1.0.4"
   },
   "devDependencies": {
     "jest": "^27.4.4"
